style.css
/* ... */
.entry-header-grid .entry-header {
	display: flex;
}

.entry-header-grid .entry-header-content {
	margin-bottom: var(--wp--preset--spacing--20);
}

.entry-header-grid .entry-banner .entry-header-content {
	margin-bottom: 0;
}

.entry-header-grid .entry-header .entry-title {
	margin: 0 0 .7rem 0;
	hyphens: auto;
	word-wrap: break-word;
	overflow-wrap: break-word;
}

.entry-header-grid .entry-header .post_author_avatar {
	border-radius: 50%;
	flex-shrink: 0;
	height: auto;
	margin-right: var(--wp--preset--spacing--10);
}

.hentry .post_author_avatar img {
	border-radius: 50%;
}

.hentry.format-audio h1.entry-title a:before,
.hentry.format-image h1.entry-title a:before,
.hentry.format-link h1.entry-title a:before,
.hentry.format-video h1.entry-title a:before,
.single-format-audio .masthead-post-byline h1.entry-title:before,
.single-format-image .masthead-post-byline h1.entry-title:before,
.single-format-link .masthead-post-byline h1.entry-title:before,
.single-format-video .masthead-post-byline h1.entry-title:before {
	font-family: 'Font Awesome 5 Free';
	font-weight: 900;
	padding-right: 10px;
}

.hentry.format-audio h1.entry-title a:before,
.single-format-audio .masthead-post-byline h1.entry-title:before {
	content: "\f025";
}

.hentry.format-image h1.entry-title a:before,
.single-format-image .masthead-post-byline h1.entry-title:before {
	content: "\f1c5";
}

.hentry.format-link h1.entry-title a:before,
.single-format-link .masthead-post-byline h1.entry-title:before {
	content: "\f35d";
}

.hentry.format-video h1.entry-title a:before,
.single-format-video .masthead-post-byline h1.entry-title:before {
	content: "\f03d";
}

.hentry.pmpro-level-required h1.entry-title a:before,
.pmpro-body-level-required .masthead-post-byline h1.entry-title:before {
	content: "\f023";
	font-family: 'Font Awesome 5 Free';
	font-weight: 900;
	padding-right: 10px;
}

.pmpro-level-required.pmpro-has-access h1.entry-title a:before,
.pmpro-body-level-required.pmpro-body-has-access h1.entry-title:before {
	content: "";
	font-family: 'Font Awesome 5 Free';
	padding-right: 0;
}

#primary .entry-banner h1.entry-title:before {
	color: var(--memberlite-color-white);
}

.entry-content .wp-post-image {
	margin-bottom: var(--wp--preset--spacing--20);
}

.format-status .entry-content .post_author_avatar {
	float: left;
	margin: 0 var(--wp--preset--spacing--20) var(--wp--preset--spacing--20) 0;
}

.format-image .wp-post-image {
	margin-bottom: 0;
	padding-right: 0;
	padding-left: 0;
}

#primary .hentry .entry-meta a {
	text-decoration: none;
}

.hentry .entry-meta a:hover {
	border-bottom: 1px dotted;
}

.entry-author {
	border: 1px solid var(--memberlite-color-borders);
	display: flex;
	flex: auto;
	flex-wrap: nowrap;
	gap: var(--wp--preset--spacing--10);
	margin: var(--wp--preset--spacing--20) 0;
	max-width: 100%;
	padding: var(--wp--preset--spacing--20);
}

.entry-author .post_author_avatar {
	flex-grow: 1;
	min-width: 80px;
}

.entry-author .post_author_details p:last-child {
	margin-bottom: 0;
}

.entry-author .post_author_name {
	font-weight: bold;
	margin: 0;
}

.hentry .entry-content .lead .wp-post-image {
	margin-bottom: 0;
}

.entry-content,
.entry-summary {
	margin: 0;
}

.entry-content > :first-child {
	margin-top: 0;
}

.entry-content .wp-audio-shortcode {
	margin-bottom: var(--wp--preset--spacing--10);
}

.error-404 .entry-content {
	padding: 0 0 var(--wp--preset--spacing--50) 0;
	text-align: center;
}

.page .entry-content {
	border-bottom: 0;
}

.page .entry-content .entry-content {
	border-bottom: 1px dotted var(--memberlite-color-borders);
}

.home .home-content .entry-content,
#main .columns .hentry.memberlite_subpagelist_item .entry-content {
	border-bottom: none;
}

.post .entry-footer {
	border-top: 1px solid var(--memberlite-color-borders);
	padding: var(--wp--preset--spacing--10) 0 0 0;
}

#primary .entry-footer a {
	color: var(--memberlite-color-link);
	text-decoration: underline;
}

#primary .entry-footer a:hover {
	color: var(--memberlite-color-text);
}

#primary .entry-footer a.pmpro_btn,
.entry-footer a.pmpro_btn:hover {border: none; }

.byline,
.updated {
	display: none;
}

.single .byline,
.group-blog .byline {
	display: inline;
}

.grid-list {
	display: flex;
	flex-direction: column;
	flex-wrap: wrap;
	gap: var(--wp--preset--spacing--20);
	justify-content: flex-start;
	margin-bottom: 2rem;
}

.grid-list > * {
	background-color: var(--memberlite-color-white);
	border: 1px solid var(--memberlite-color-borders);
	display: flex;
	flex-direction: column;
	flex-wrap: wrap;
	justify-content: start;
	margin: 0;
	padding: var(--wp--preset--spacing--10);
	text-align: center;
}

.grid-list h1,
.grid-list h2 {
	font-size: var(--wp--preset--font-size--24);
	letter-spacing: -.2px;
	margin: 0;
	word-break: break-word;
}

.grid-list h1 a,
.grid-list h2 a {
	color: var(--memberlite-color-text);
	display: block;
	padding: var(--wp--preset--spacing--10);
	text-decoration: none;
}

.grid-list h1 a:hover,
.grid-list h2 a:hover {
	border-bottom: none;
	color: var(--memberlite-color-primary);
}

.grid-list a.post-thumbnail-link {
	align-items: center;
	display: flex;
	margin: calc(-1 * var(--wp--preset--spacing--10));
	max-height: 180px;
	overflow: hidden;
}

.grid-list a.post-thumbnail-link .wp-post-image {
	display: block;
}

.grid-list a.post-thumbnail-link .wp-post-image {
	margin-bottom: 0;
}

.grid-list a.post-thumbnail-link:hover,
.grid-list a.post-thumbnail-link:focus,
.grid-list a.post-thumbnail-link:active {
	filter: unset;
}

.grid-list a.post-thumbnail-link .post-thumbnail-empty {
	align-items: center;
	background-color: rgba( 0, 0, 0, 0.1);
	display: flex;
	height: 180px;
	justify-content: center;
	width: 100%;
}

.grid-list .post-thumbnail-empty .fas {
	color: var(--memberlite-color-white);
	font-size: var(--wp--preset--font-size--72);
}

.grid-list .entry-header {
	margin-top: var(--wp--preset--spacing--20);
	z-index: 1;
}
/* ... */

